--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,12 +126,18 @@ body.light-theme {
   max-width: 60%;
   max-height: 60%;
   }
+  
+  .breadcrumb-current {
+  font-size: 19px;
+}
+  .breadcrumb-link {
+  font-size: 20px;
+  }
+
   .page h1 {
   font-size: 32px;
  }
-  .page1 h1 {
-  font-size: 28px;
-  }
+
 .page p {
   font-size: 25px;
  }
@@ -230,21 +236,6 @@ body.light-theme {
   margin-bottom: 4px;
 }
 .page a {
-  color: #5BC0BE;
-  font-weight: 600;
-  text-decoration: none;
-}
-.page1 {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 8px -18px;
-}
-.page1 h1 {
-  font-size: 18px;
-  margin-bottom: 8px;
-  color: var(--pag-h);
-}
-.page1 a {
   color: #5BC0BE;
   font-weight: 600;
   text-decoration: none;
@@ -742,6 +733,7 @@ body.light-theme .toggle-switch {
 .breadcrumb-link {
   color: #5BC0BE;
   text-decoration: none;
+  font-size: 10px;
   font-weight: 600;
 }
 
@@ -755,5 +747,6 @@ body.light-theme .toggle-switch {
 
 .breadcrumb-current {
   color: var(--pag-h);
-  font-weight: 700;
+  font-size: 9.5px;
+  font-weight: 600;
 }
