--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,8 +77,8 @@ body.light-theme {
   box-sizing: border-box;
 }
 .header-logo {
-  width: 80px;
-  height: 80px;
+  width: 55px;
+  height: 55px;
   object-fit: contain;
 }
 .header-title {
@@ -95,6 +95,10 @@ body.light-theme {
 .header-inner {
   height: 45px;
 }
+  .header-logo {
+  width: 45p x;
+  height: 45px;
+  }
   .footer-grid h4 {
     font-size: 13px;
   }
@@ -120,6 +124,10 @@ body.light-theme {
 }
 @media (min-width: 650px) {
   .header-inner {
+  height: 65px;
+  }
+  .header-logo {
+  width: 65px;
   height: 65px;
   }
   #lightbox img {
