--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -1,6 +1,9 @@
-
+html {
+  scroll-behavior: smooth;
+}
+html, body {
+  min-height: 100%;
 body {
-  padding-top: 60px; 
   margin: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   background: radial-gradient(1200px 600px at 10% -10%, #13224a, transparent),
@@ -31,10 +34,11 @@ button-logout{
   padding:20px;
 }
 .card{
+  width:80%;
   background:#15181b;
   padding:30px;
   border-radius:14px;
-  width:320px;
+  max-width:320px;
   text-align:center;
   border:1px solid #5BC0BE33;
 }
