--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -93,3 +93,34 @@ button{
 @keyframes spin{
   to{ transform:rotate(360deg); }
 }
+  .price-row{
+  display:flex;
+  gap:8px;
+}
+
+textarea{
+  width:100%;
+  height:140px;
+  margin:8px 0;
+  padding:10px;
+  border-radius:8px;
+  border:1px solid #2b3136;
+  background:#0f1113;
+  color:#fff;
+}
+
+#imagesList input{
+  width:100%;
+  margin:6px 0;
+}
+
+.save-btn{
+  margin-top:10px;
+  width:100%;
+  padding:10px;
+  background:#5BC0BE;
+  border:none;
+  border-radius:8px;
+  color:#fff;
+}
+
