--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,35 +4,16 @@ html {
 html, body {
   min-height: 100%;
 }
+
 body {
-  padding-top: 60px;
+  padding-top: 60px; 
   margin: 0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  background: var(--bg-main); /* solid base */
+  background: radial-gradient(1200px 600px at 10% -10%, var(--bg-des), transparent) fixed,
+              radial-gradient(1200px 600px at 110% 10%, var(--bg-des2), transparent) fixed,
+              var(--bg-main);
   color: var(--text-main);
   transition: background 0.3s ease, color 0.3s ease;
-}
-.bg-top-design{
-  top:0;
-  left:0;
-  right:0;
-  height:500px; /* height of top gradient area */
-  z-index:-1;
-  pointer-events:none;
-
-  background:
-    radial-gradient(1200px 600px at 10% -10%, var(--bg-des), transparent),
-    radial-gradient(1200px 600px at 110% 10%, var(--bg-des2), transparent),
-    var(--bg-main);
-}
-.bg-top-design::after{
-  content:"";
-  position:absolute;
-  bottom:0;
-  left:0;
-  right:0;
-  height:120px;
-  background:linear-gradient(to bottom, transparent, var(--bg-main));
 }
 
 
