--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -66,6 +66,17 @@ input{
   color:#fff;
   box-sizing:border-box;
 }
+.primary-btn{
+  width:100%;
+  padding:12px;
+  border:none;
+  border-radius:10px;
+  background:#5BC0BE;
+  color:#fff;
+  font-weight:600;
+  margin-bottom:14px;
+  cursor:pointer;
+}
 
 button-login{
   width:100%;
@@ -139,7 +150,7 @@ button-login{
 textarea{
   width:100%;
   height:140px;
-  margin:8px 0;
+  margin:8px 10px;
   padding:10px;
   border-radius:8px;
   border:1px solid #2b3136;
@@ -219,3 +230,5 @@ textarea{
   display:none;
   margin-bottom:16px;
 }
+
+
