--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -204,8 +204,8 @@ textarea{
 .toggle-switch{
   position:relative;
   display:inline-block;
-  width:46px;
-  height:26px;
+  width:36px;
+  height:20px;
 }
 
 .toggle-switch input{
@@ -226,20 +226,20 @@ textarea{
 .toggle-slider::before{
   content:"";
   position:absolute;
-  height:20px;
-  width:20px;
-  left:3px;
-  top:3px;
+  height:16px;
+  width:16px;
+  left:2px;
+  top:2px;
   background:white;
   border-radius:50%;
   transition:.25s;
 }
 
 .toggle-switch input:checked + .toggle-slider{
-  background:#22c55e; /* green */
+  background:#5BC0BE; /* green */
 }
 
 .toggle-switch input:checked + .toggle-slider::before{
-  transform:translateX(20px);
+  transform:translateX(16px);
 }
 
