--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -637,7 +637,7 @@ body.light-theme .toggle-switch {
 }
 .sale-off {
   text-align:center;
-  padding: 100px;
+  margin: 92px;
 }
 .sale-cta {
   display: inline-block;
